@@ -26,13 +26,16 @@
 /lib
 ├── business/       # 业务逻辑相关代码
 │   └── net/       # 网络请求相关代码
+│   └── teenager/  # 青少年模式相关代码
 ├── compat/         # 兼容性和工具类
 ├── config/         # 配置文件
+├── dialog/         # 对话框组件
 ├── entity/         # 数据实体类
 ├── fragment/       # 页面片段组件
 ├── page/           # 页面组件
 ├── provider/       # 数据提供者和状态管理
 ├── scene/          # 场景页面
+├── utils/          # 工具类
 ├── widget/         # 自定义UI组件
 └── main.dart       # 应用入口文件
 ```
@@ -45,6 +48,9 @@
 #### 2.1.1 net/
 - `baixing_net_core_work.dart`: 网络核心工作类，处理网络请求。
 
+#### 2.1.2 teenager/
+- `baixing_teenager_mode_util.dart`: 青少年模式工具类，处理青少年模式相关功能。
+
 ### 2.2 compat/
 兼容性和工具类，提供各种辅助功能。
 
@@ -55,7 +61,12 @@
 ### 2.3 config/
 配置文件目录，存放应用的各种配置信息。
 
-### 2.4 entity/
+### 2.4 dialog/
+对话框组件目录，存放应用中使用的各种对话框。
+
+- `baixing_set_enter_teenager_mode_password_dialog.dart`: 设置青少年模式监护密码的对话框。
+
+### 2.5 entity/
 数据实体类，定义应用中使用的数据结构。
 
 - `baixing_account_entity.dart`: 账户实体类。
@@ -68,17 +79,17 @@
 - `person.dart`: 人员实体类。
 - `person.g.dart`: 人员实体类生成代码。
 
-### 2.5 fragment/
+### 2.6 fragment/
 页面片段组件，用于构建页面的一部分。
 
 - `baixing_live_page_fragment.dart`: 直播页面片段。
 - `baixing_live_room_list_fragment.dart`: 直播间列表片段。
 - `baixing_me_fragment.dart`: 个人中心页面片段。
 
-### 2.6 page/
+### 2.7 page/
 页面组件目录，存放完整的页面组件。
 
-### 2.7 provider/
+### 2.8 provider/
 数据提供者和状态管理，处理应用的数据流和状态。
 
 - `baixing_account_model.dart`: 账户数据模型。
@@ -88,16 +99,22 @@
 - `baixing_live_streaming_column_model.dart`: 直播流栏目数据模型。
 - `baixing_login_model.dart`: 登录数据模型。
 
-### 2.8 scene/
+### 2.9 scene/
 场景页面，应用的主要页面。
 
+- `baixing_enter_teenager_mode_scene.dart`: 青少年模式入口场景。
 - `baixing_home_scene.dart`: 首页场景。
 - `baixing_login_scene.dart`: 登录场景。
 - `baixing_select_login_scene.dart`: 选择登录方式场景。
 - `baixing_splash_scene.dart`: 启动页场景。
+- `baixing_teenager_content_scene.dart`: 青少年模式内容场景。
+- `baixing_teenager_mode_scene.dart`: 青少年模式设置场景。
 - `baixing_web_scene.dart`: Web页面场景。
 
-### 2.9 widget/
+### 2.10 utils/
+工具类目录，存放各种辅助功能的工具类。
+
+### 2.11 widget/
 自定义UI组件，可复用的界面元素。
 
 - `Baixing_privacy_agreement_text.dart`: 隐私协议文本组件。
@@ -111,5 +128,5 @@
 - `baixing_user_base_info_widget.dart`: 用户基本信息组件。
 - `baixing_user_level_card_widget.dart`: 用户等级卡片组件。
 
-### 2.10 main.dart
+### 2.12 main.dart
 应用入口文件，定义应用的启动逻辑。
