@@ -1,3 +1,11 @@
 2025.05.06 23:17
 /Users/yuyuexing/myProject/code/flutter/baixing2live/lib/scene/baixing_teenager_mode_scene.dart
 修复了代码中的语法错误，删除了多余的右花括号。
+
+2025-05-07 07:23:11
+/Users/yuyuexing/myProject/code/flutter/baixing2live/lib/scene/baixing_enter_teenager_mode_scene.dart
+新增青少年模式入口场景类，用于展示青少年模式的说明和限制。
+
+2025-05-07 07:27:10
+/Users/yuyuexing/myProject/code/flutter/baixing2live/lib/dialog/baixing_set_enter_teenager_mode_password_dialog.dart
+新增设置青少年模式监护密码的对话框类，用于设置和验证青少年模式密码。
